폰트 테스트(태백은하수체)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,12 @@
+@font-face {
+    font-family: 'TAEBAEKmilkyway';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2310@1.0/TAEBAEKmilkyway.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
 * {
+  font-family: TAEBAEKmilkyway;
   margin: 0;
   padding: 0;
 }
