--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,13 +29,13 @@ header {
   flex-direction: column;
   gap: 0;
 
-  background-color: #EE9996;
+  background-color: #ABDCFF;
 }
 
 header .title {
   padding: 1vw;
-  background-color: #002DF5;
-  color: white;
+  color: #002DF5;
+  background-color: white;
   font-weight: 900;
 }
 
@@ -51,5 +51,5 @@ header .menu li {
 }
 
 header .menu li:hover {
-  background-color: #DD322C;
+  background-color: #002DF5;
 }
