--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,61 +5,110 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Pretendard';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
 * {
-  font-family: TAEBAEKmilkyway;
-  margin: 0;
-  padding: 0;
-  color: black;
+    font-family: TAEBAEKmilkyway, ONE-Mobile-POP;
+    margin: 0;
+    padding: 0;
+    color: black;
+}
+
+@media (prefers-color-scheme: dark) {
+    * {
+        color: white;
+    }
+    body {
+        background-color: black;
+    }
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
+    text-decoration: none;
+    color: inherit;
 }
 
 body {
-  display: grid;
-  grid-template-columns: auto auto auto;
+    display: grid;
+    grid-template-columns: auto auto 1fr;
 }
 
 header {
-  width: fit-content;
-  height: 100vh;
+    width: fit-content;
+    height: 100vh;
 
-  display: flex;
-  flex-direction: column;
-  gap: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 0;
 
-  background-color: #C2CDFF;
+    background-color: #C2CDFF;
 }
 
-header .title {
-  padding: 1vw;
-  background-color: #0025CC;
-  color: white;
-  font-weight: 900;
+@media (prefers-color-scheme: dark) {
+    header {
+        background-color: #000B3d;
+    }
 }
 
+header .logo {
+    width: 100%;
+    aspect-ratio: 1/1;
+
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain;
+
+    background-image: url('./logo-transparent.png');
+}
+
+@media (prefers-color-scheme: dark) {
+    header .logo{
+        background-image: url('./logo-white-transparent.png');
+    }
+}
+
+    
 header .menu {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
+
+    list-style: none;
 }
 
 header .menu li {
-  padding: 1vw;
-  background-color: transparent;
-  font-weight: 700;
+    padding: 1vw;
+    background-color: transparent;
+    font-weight: 700;
+    font-size: calc(1vw + 5pt);
+    position: relative;
+}
+
+header .menu li.active::after {
+    height: 50%;
+    aspect-ratio: 1/1;
+    content: '';
+    position: absolute;
+    transform: translateX(40%) rotate(45deg);
+
+    background-color: white;
+}
+
+header .menu li.active.mainF::after {
+    background-color: #ebefff;
 }
 
 header .menu li:hover {
-  background-color: #002DF5;
-  color: white;
+    background-color: #3358FF; /*#002DF5*/
+    color: white;
 }
 
-header .menu li:hover ::after {
-  background-color: #ebefff;
-}
-
-div.option {
-  background-color: #ebefff;
+@media (prefers-color-scheme: dark) {
+    header .menu li:hover {
+        background-color: #0025CC;
+    }
 }
