전체 디자인 수정
다크모드 활성화
글씨(폰트, weight, size 등)

--- a/src/app/function/Mask/mask.css
+++ b/src/app/function/Mask/mask.css
@@ -17,6 +17,7 @@ div.selector label {
     display: block;
     
     border-radius: 0.5vw;
+    background-color: var(--backb);
     text-align: center;
 
     font-weight: bold;
@@ -28,6 +29,8 @@ div.selector input[type="radio"] {
 
 div.selector input[type="radio"]:checked + label {
     background-color: var(--text);
+    color: var(--backb);
+}
 
 canvas {
     display: block;
